Fix alignment of list items

--- a/app/ui/ListItem.scss
+++ b/app/ui/ListItem.scss
@@ -33,9 +33,14 @@
 }
 
 .ListItem-end {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  align-self: stretch;
   .ListItem.nowrap & {
     @include ellipsis();
+  }
+  .ListItem-end-child {
+    display: flex;
   }
 }
 
